--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -160,6 +160,7 @@
     "stop_token": "cpp",
     "text_encoding": "cpp",
     "thread": "cpp",
-    "__hash_table": "cpp"
+    "__hash_table": "cpp",
+    "climits": "cpp"
   }
 }
